# cinelerra-cv

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README.BUILD  TODO  autogen.sh  cinelerra-cvs-current.spec.in  configure.ac  configure.in
libmpeg3/: .gitignore  Makefile.am  mpeg3demux.c  mpeg3dump.c  mpeg3ifo.c  mpeg3io.c  mpeg3private.h  mpeg3title.c  mpeg3toc.c  mpeg3tocutil.c
libmpeg3/audio/: Makefile.am  ac3.c
libmpeg3/video/: Makefile.am  mpeg3video.c  output.c  slice.c
plugins/: Makefile.am
plugins/1080to540/: 1080to540.C  1080to540.h  Makefile.am
plugins/720to480/: 720to480.C  720to480.h  Makefile.am
plugins/C41/: Makefile.am  c41.C
plugins/aging/: Makefile.am  aging.C  aging.h  agingwindow.C  agingwindow.h
plugins/bandslide/: Makefile.am  bandslide.C  bandslide.h
plugins/bandwipe/: Makefile.am  bandwipe.C  bandwipe.h
plugins/bluebanana/: Makefile.am  bluebanana.C  bluebanana.h  bluebananacolor.c  bluebananaconfig.C  bluebananaconfig.h  bluebananaengine.C  bluebananalookups.C  bluebananaslider.C  bluebananaslider.h  bluebananawindow.C  bluebananawindow.h
plugins/bluedottheme/: Makefile.am  bluedottheme.C
plugins/blur/: Makefile.am  blur.C  blur.h  blurwindow.C  blurwindow.h
plugins/blurzoom/: Makefile.am  blurzoom.C  blurzoom.h  blurzoomwindow.C  blurzoomwindow.h
plugins/brightness/: Makefile.am  brightness.C  brightness.h  brightnesswindow.C  brightnesswindow.h
plugins/burn/: Makefile.am  burn.C  burn.h  burnwindow.C  burnwindow.h
plugins/cdripper/: Makefile.am  cdripper.C  cdripwindow.C  cdripwindow.h
plugins/chromakey/: Makefile.am  chromakey.C  chromakey.h
plugins/chromakeyhsv/: Makefile.am  chromakey.C  chromakey.h
plugins/color3way/: Makefile  Makefile.am  aggregated.h  color3way.C  color3way.h  color3waywindow.C  color3waywindow.h
plugins/colorbalance/: Makefile.am  aggregated.h  colorbalance.C  colorbalance.h  colorbalancewindow.C  colorbalancewindow.h
plugins/colors/: Makefile.am  colorpicker.C  colorpicker.h
plugins/compressor/: Makefile.am  compressor.C  compressor.h
plugins/crossfade/: Makefile.am
plugins/dbx/: dbx.h
plugins/decimate/: Makefile.am  decimate.C
plugins/defaulttheme/: Makefile.am  defaulttheme.C
plugins/deinterlace/: Makefile.am  deinterlace.h  deinterwindow.C  deinterwindow.h
plugins/delayaudio/: Makefile.am  delayaudio.C  delayaudio.h
plugins/delayvideo/: Makefile.am  delayvideo.C  delayvideo.h
plugins/denoise/: Makefile.am  denoise.C  denoise.h
plugins/denoisefft/: Makefile.am  denoisefft.C
plugins/denoisemjpeg/: Makefile.am  denoisemjpeg.C  denoisemjpeg.h
plugins/denoiseseltempavg/: Makefile.am  seltempavg.C  seltempavg.h  seltempavgwindow.C  seltempavgwindow.h
plugins/denoisevideo/: Makefile.am  denoisevideo.C  denoisevideo.h
plugins/despike/: Makefile.am  despike.h  despikewindow.C  despikewindow.h
plugins/diffkey/: Makefile.am  diffkey.C
plugins/dissolve/: Makefile.am  dissolve.C
plugins/dot/: Makefile.am  dot.C  dot.h  dotwindow.C  dotwindow.h
plugins/downsample/: Makefile.am  downsample.C
plugins/fieldframe/: Makefile.am  fieldframe.C
plugins/findobject/: Makefile  Makefile.am  findobject.C  findobject.h  findobject.inc  findobjectwindow.C  findobjectwindow.h  findobjectwindow.inc  surfscan.C  surfscan.h
plugins/flash/: Makefile.am
plugins/flip/: Makefile.am  flip.C  flipwindow.C  flipwindow.h
plugins/fourier/: Makefile.am
plugins/framefield/: Makefile.am  framefield.C
plugins/freeverb/: Makefile.am  freeverb.C
plugins/freezeframe/: Makefile.am  freezeframe.C  freezeframe.h
plugins/gain/: Makefile.am  gainwindow.C  gainwindow.h
plugins/gamma/: Makefile.am  aggregated.h  gamma.C  gammawindow.C  gammawindow.h
plugins/gradient/: Makefile.am  gradient.C  gradient.h
plugins/graphic/: Makefile.am  graphic.C
plugins/greycstoration/: CImg.h  Makefile.am  greycstoration.h  greycstorationplugin.C  greycstorationplugin.h  greycstorationwindow.C  greycstorationwindow.h
plugins/histogram/: Makefile.am  histogram.C  histogramwindow.C  histogramwindow.h
plugins/holo/: Makefile.am  holo.C  holo.h  holowindow.C  holowindow.h
plugins/huesaturation/: Makefile.am  huesaturation.C
plugins/interpolate/: Makefile.am  aggregated.h  interpolate.C  interpolate.h
plugins/interpolateall/: Makefile.am  interpolateall.C
plugins/interpolateaudio/: Makefile.am
plugins/interpolatevideo/: Makefile.am  interpolatevideo.C
plugins/invertaudio/: Makefile.am
plugins/invertvideo/: Makefile.am  invert.C
plugins/irissquare/: Makefile.am  irissquare.C  irissquare.h
plugins/ivtc/: Makefile.am  ivtc.C  ivtcwindow.C  ivtcwindow.h
plugins/lame/: Makefile.am
plugins/lens/: Makefile  Makefile.am  lens.C  lens.h  picon_png.h
plugins/level/: Makefile.am  leveleffect.C  leveleffect.h
plugins/libeffecttv/: Makefile.am  effecttv.C
plugins/libfourier/: Makefile.am  fourier.C  fourier.h
plugins/linearblur/: Makefile.am  linearblur.C
plugins/liveaudio/: Makefile.am  liveaudio.C
plugins/livevideo/: Makefile.am  livevideo.C
plugins/loopaudio/: Makefile.am  loopaudio.C
plugins/loopvideo/: Makefile.am  loopvideo.C
plugins/microtheme/: Makefile.am  microtheme.C  microtheme.h
plugins/motion/: Makefile.am  motion.C  motionwindow.C  motionwindow.h
plugins/motionblur/: Makefile.am  motionblur.C
plugins/normalize/: Makefile.am  normalize.C  normalizewindow.C  normalizewindow.h
plugins/oilpainting/: Makefile.am  oil.C  oil.h
plugins/overlay/: Makefile.am  overlay.C
plugins/overlayaudio/: Makefile.am  overlayaudio.C
plugins/parametric/: Makefile.am  parametric.C  parametric.h
plugins/perspective/: Makefile.am  perspective.C  perspective.h
plugins/pitch/: Makefile.am  pitch.C  pitch.h
plugins/polar/: Makefile.am  polar.C  polar.h
plugins/quark/: Makefile.am  quark.C  quark.h  quarkwindow.C  quarkwindow.h
plugins/radialblur/: Makefile.am  radialblur.C
plugins/reframe/: Makefile.am  reframe.C  reframe.h
plugins/reframert/: Makefile.am  reframert.C
plugins/reroute/: Makefile.am  reroute.C
plugins/suv/: suv.C  (+1 more)
(+620 files in other folders)
